--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,11 @@
 {
   "name": "taste-station",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-   "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dist": "npx tsc",
+    "dev": "cross-env NODE_ENV=development nodemon --legacy-watch src/index.ts",
+    "start": "cross-env NODE_ENV=production node dist/index.js"
   },
   "keywords": [],
   "author": "Saiful Islam",
@@ -12,10 +13,28 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.2"
+    "mailtrap": "^3.4.0",
+    "mongoose": "^8.7.2",
+    "multer": "^1.4.5-lts.1",
+    "stripe": "^17.2.1"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.8.1",
+    "@types/source-map-support": "^0.5.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   }
 }
